--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,54 @@
 @charset "utf-8";
 /* CSS Document */
 
+/* IMPLEMENTING MEYER RESET */
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Our code starts here */
+/*  MODIFIED PIXEL TO PERCENTAGE FOR RESPONSIVENESS */
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -25,12 +73,12 @@ a:hover, a:focus {
 	color: #3397db;
 	text-decoration: none;
 }
-a img{
+a img {
 	border: none 0px #fff;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
+  margin: 0 0 1.2rem;
 }
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
@@ -44,44 +92,45 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
-  padding: 25px;
+  padding: 1.9em;
   text-align: center;
   text-transform: uppercase;
 }
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  height: 5em;
   background-color: #252831;
   text-align:center;
 }
 nav h1 {
   margin: auto;
+	padding-top: 1.5rem; /*added padding*/
 }
 nav h1 a {
   color: #fff;
   font-size: 14pt;
   font-weight: 200;
-  letter-spacing: 10px;
+  letter-spacing: 0.8em;
   text-transform: uppercase;
 }
 #breadcrumb {
-    padding: 10px 40px 16px;
+    padding: 0.7em 2.5em 1em;
     list-style: none;
     background-color: #eee;
-    font-size: 17px;
+    font-size: 1em;
     margin: 0;
-    width: calc(50% - 80px);
+    width: calc(50% - 5em);
 }
 
-/* Display list items side by side */
+
 #breadcrumb li {
     display: inline;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
 #breadcrumb li+li:before {
-    padding: 8px;
+    padding: 0.5em;
     color: black;
     content: "/\00a0";
 }
@@ -99,61 +148,75 @@ nav h1 a {
 }
 /* ====================== Map ====================== */
 #map {
-  height: 400px;
+  height: 25em;
   width: 100%;
   background-color: #ccc;
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: 3em;
   background-color: #3397DB;
   align-items: center;
+	display: flex; /* FILTER OPTIONS APPEAR SIDE BY SIDE RESPONSIVELY */
 }
 .filter-options h2 {
   color: white;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin: 0 1.2em;
+  margin-right: auto; /* DROPDOWN MENU ALWAYS ON THE RIGHT OF FILTER OPTIONS CONTAINER */
 }
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
   font-size: 11pt;
-  height: 35px;
+  height: 2.2em;
   letter-spacing: 0;
   margin: 10px;
   padding: 0 10px;
-  width: 200px;
+  width: 12.5em;
+
 }
 
 /* ====================== Restaurant Listing ====================== */
+/* Add map in the restaurant details page and omit showing it in the main page */
+#map-container {
+	display: none;
+}
+.inside #map-container {
+	display: block;
+}
+
 #restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  padding: 1.9em 0.9em 3.8em;
   text-align: center;
+  /* setting dimensions for unordered list of restaurants*/
+	margin-top: 5%;
+	padding: 0;
+	width: 100%;
 }
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
-  margin: 15px;
-  min-height: 380px;
-  padding: 0 30px 25px;
-  text-align: left;
-  width: 270px;
+  margin: 0.9em;
+  padding: 0 1.9em 1.3em;
+  /* setting dimensions for each list iten in unordered list of restaurants*/
+	min-height: 20rem;
+	width: 80%;
+	margin: 0 auto;
 }
 #restaurants-list .restaurant-img {
-  background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
+	min-height: 10rem;
 }
 #restaurants-list li h1 {
   color: #f18200;
@@ -162,24 +225,26 @@ nav h1 a {
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
-  margin: 20px 0 10px;
+  margin: 1.1em 0 10px;
   text-transform: uppercase;
 }
 #restaurants-list p {
   margin: 0;
   font-size: 11pt;
 }
-#restaurants-list li a {
-  background-color: orange;
+
+/* Changed <a> to button for better accessibility */
+#restaurants-list li button {
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
   font-size: 10pt;
-  margin: 15px 0 0;
-  padding: 8px 30px 10px;
+  margin: 0.9em 0 0;
+  padding: 8px 1.9em 10px;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+	border-radius: 0.5em;
 }
 
 /* ====================== Restaurant Details ====================== */
@@ -194,7 +259,7 @@ nav h1 a {
   height: 87%;
   position: fixed;
   right: 0;
-  top: 80px;
+  top: 5em;
   width: 50%;
 }
 .inside #map {
@@ -213,7 +278,7 @@ nav h1 a {
   font-size: 20pt;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 15px 0 30px;
+  margin: 1em 0 2em;
   text-transform: uppercase;
   line-height: 1.1;
 }
@@ -222,15 +287,15 @@ nav h1 a {
 }
 #restaurant-address {
   font-size: 12pt;
-  margin: 10px 0px;
+  margin: 0.8em 0px;
 }
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
   font-size: 12pt;
   font-weight: 300;
-  letter-spacing: 10px;
-  margin: 0 0 20px;
+  letter-spacing: 0.8em;
+  margin: 0 0 1.2em;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
@@ -239,11 +304,11 @@ nav h1 a {
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
+  padding: 9em 2.8em 1.9em;
   width: 50%;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 1.9em 2.8em 5em;
 }
 #reviews-container h2 {
   color: #f58500;
@@ -261,9 +326,9 @@ nav h1 a {
     border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
-  margin: 0 0 30px;
+  margin: 0 0 2.9em;
   overflow: hidden;
-  padding: 0 20px 20px;
+  padding: 0 1.2em 1.2em;
   position: relative;
   width: 85%;
 }
@@ -272,4 +337,171 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+/* PICTURE ELEMENT FOR RESPONSIVE IMAGES */
+picture {
+	height: auto;
+	width: 100%;
+}
+/* FOR MOBILES */
+@media screen and (max-width: 600px) {
+	nav {
+		padding-bottom: 1.5rem;
+	}
+	.filter-options h2 {
+		display: none;
+	}
+	#restaurants-list li {
+		width: 80%;
+		margin: 0 auto;
+	}
+	#restaurants-list li img {
+		width: 100%;
+	}
+	.inside {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+	}
+	.inside header {
+		position: relative;
+	}
+	.inside #footer {
+		position: relative;
+		width: 100%;
+		padding: 2%;
+		font-size: 6pt;
+	}
+	.inside #map-container {
+		width: 100vw;
+		height: 40vh;
+		position: relative;
+		top: 0;
+	}
+	/* Not displaying image and cuisine of restaurant in the details page */
+	.inside .child-container img, .inside .child-container p {
+		display: none;
+	}
+	#breadcrumb {
+		width: 100%;
+		padding: 2% 0;
+		text-align: center;
+	}
+	#restaurant-container {
+		padding-top: 5%;
+		margin: 0;
+	}
+	#restaurant-container, #reviews-container {
+		width: 80%;
+		margin-top: 0.5rem;
+	}
+	#restaurant-container h1 {
+		font-size: 16pt;
+	}
+  #reviews-list li {
+		padding: 0.7rem;
+	}
+
+}
+/* FOR TABLETS */
+@media screen and (min-width: 601px) and (max-width: 1000px) {
+	#restaurants-list {
+		display: flex;
+		flex-flow: row wrap;
+	}
+	#restaurants-list li {
+		width: 35%;
+		margin-top: 2%;
+	}
+
+	.inside {
+		display: flex;
+		flex-direction: column;
+		max-width: 100%;
+	}
+	.inside header {
+		position: relative;
+	}
+  .inside #footer {
+		position: relative;
+		width: 100%;
+	}
+	.inside #breadcrumb {
+		width: 100%;
+		text-align: center;
+		margin: 0;
+		padding: 0.5rem;
+	}
+	.inside #breadcrumb li {
+		font-size: 1rem;
+	}
+	.inside #map-container {
+		position: relative;
+		top: 0;
+		width: 100vw;
+		height: 40vh;
+	}
+	#restaurant-container, #reviews-container {
+		padding: 0;
+		margin: 0 auto;
+		width: 80%;
+		margin-top: 0.5rem;
+	}
+	#restaurant-name {
+		font-size: 1.2rem;
+		text-align: center;
+	}
+	#reviews-list li {
+		padding: 1rem;
+	}
+	.inside #restaurant-container {
+		display: flex;
+		flex-flow: row wrap;
+		width: 100%;
+		padding: 5%;
+	}
+	.inside .child-container {
+		width: 45%;
+		margin: 0;
+		align-self:flex-start;
+	}
+	.inside .child-container:nth-of-type(2) {
+		margin-left: 5%;
+		margin-top: 15%;
+	}
+}
+
+/* FOR DESKTOPS */
+@media screen and (min-width: 1001px) {
+	#restaurants-list {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+	}
+	#restaurants-list li {
+		width: 25%;
+		margin-top: 2%;
+	}
+	.inside #map-container {
+	  height: 100%;
+	  top: 0;
+	  width: 50%;
+	}
+	.inside header nav{
+		width: 50%;
+	}
+	#restaurant-container, #reviews-container {
+		padding-left: 1rem;
+		margin: 0;
+	}
+
+	#reviews-list li {
+		padding: 1rem;
+	}
+	#footer {
+		width: 100%;
+		padding: 1rem 0;
+		margin: 0;
+	}
 }
